...
    <!-- Menu option to clear calculation history and memory. [CHAR_LIMIT=40] -->
    <string name="menu_clear_history">Clear</string>

    <!-- Action bar title in history page. [CHAR_LIMIT=40] -->
    <string name="title_history">History</string>
    <!-- Action bar navigate up description in history page. [CHAR_LIMIT=40] -->
    <string name="desc_navigate_up">Navigate up</string>

    <!-- Title for alert dialog when calculation takes too long (timeout). [CHAR_LIMIT=30] -->
    <string name="dialog_timeout">Timeout</string>

    <!--
      Message for alert dialog when user is about to clear history and memory. [CHAR_LIMIT=NONE]
...
